tests/ui/serve_mux_non_payload.stderr
error[E0277]: the trait bound `NotPayload: TypedTaskPayload` is not satisfied
  --> tests/ui/serve_mux_non_payload.rs:7:9
   |
 6 |       let _mux = serve_mux! {
   |  ________________-
 7 | |         NotPayload => |_payload: NotPayload, _context: &ProcessingContext| -> Result<(), HandlerError> {
   | |         ^^^^^^^^^^ unsatisfied trait bound
 8 | |             Ok(())
 9 | |         },
10 | |     };
   | |_____- required by a bound introduced by this call
   |
help: the trait `TypedTaskPayload` is not implemented for `NotPayload`
  --> tests/ui/serve_mux_non_payload.rs:3:1
   |
 3 | struct NotPayload;
   | ^^^^^^^^^^^^^^^^^
note: required by a bound in `ServeMux::handle_typed`
  --> src/processing/handler/mux.rs
   |
   |     pub fn handle_typed<P, F>(&mut self, handler: F)
   |            ------------ required by a bound in this associated function
   |     where
   |         P: TypedTaskPayload + Send + 'static,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `ServeMux::handle_typed`
